--- a/Hardhat/package.json
+++ b/Hardhat/package.json
@@ -1,9 +1,10 @@
 {
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "hardhat": "^2.17.2"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.0",
     "dotenv": "^16.3.1"
   }
 }
