--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-template",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,30 +9,51 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ensdomains/thorin": "^0.6.42",
-    "@rainbow-me/rainbowkit": "^1.0.8",
-    "next": "13.4.12",
-    "next-seo": "^6.1.0",
-    "next-themes": "^0.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.3.1",
-    "react-transition-state": "1.1.5",
-    "siwe": "^2.1.4",
-    "styled-components": "^6.0.7",
-    "usehooks-ts": "^2.9.1",
-    "viem": "^1.5.3",
-    "wagmi": "^1.3.9"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.3",
+    "@portabletext/react": "3.0.18",
+    "@radix-ui/react-aspect-ratio": "1.0.3",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tooltip": "1.0.7",
+    "@react-three/drei": "9.105.4",
+    "@react-three/fiber": "8.16.2",
+    "@sanity/image-url": "1.0.2",
+    "@vercel/analytics": "1.2.2",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "framer-motion": "11.1.7",
+    "lucide-react": "0.373.0",
+    "next-sanity": "9.0.10",
+    "next-themes": "0.3.0",
+    "tailwind-merge": "2.3.0",
+    "three": "0.163.0"
   },
   "devDependencies": {
-    "@types/node": "^20.4.7",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.46.0",
-    "eslint-config-next": "^13.4.12",
-    "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "@ianvs/prettier-plugin-sort-imports": "4.2.1",
+    "@portabletext/types": "2.0.13",
+    "@tailwindcss/typography": "0.5.12",
+    "@types/eslint": "^8.56.10",
+    "@types/node": "20.12.7",
+    "@types/react-dom": "18.2.25",
+    "@types/react": "18.2.79",
+    "@types/three": "0.163.0",
+    "@typescript-eslint/eslint-plugin": "7.7.1",
+    "@typescript-eslint/parser": "7.7.1",
+    "autoprefixer": "10.4.19",
+    "eslint-config-next": "14.2.2",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-deprecation": "2.0.0",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-tailwindcss": "3.15.1",
+    "eslint": "8.57.0",
+    "postcss": "8.4.38",
+    "prettier-plugin-tailwindcss": "0.5.14",
+    "prettier": "3.2.5",
+    "standard": "17.1.0",
+    "tailwindcss-animate": "1.0.7",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5"
   }
 }
